# new_digs

./: .gitignore  .pre-commit-config.yaml  README.md  manage.py  pyproject.toml  zappa_settings.json
.github/: CODEOWNERS
.github/workflows/: lint.yml  ruff.yml
django/new_digs/: manage.py
django/new_digs/new_digs/: asgi.py  settings.py  urls.py  wsgi.py
django/new_digs/new_digs_app/: admin.py  apps.py  constants.py  urls.py  views.py
django/new_digs/new_digs_app/migrations/: 0001_initial.py  0002_dog_person_last_name_alter_person_first_name_and_more.py
django/new_digs/new_digs_app/models/: __init__.py  dog.py  owner.py  person.py  pet.py
django/new_digs/new_digs_app/views/: __init__.py  participant_app.py
infrastructure/: main.tf
new_digs/: manage.py
new_digs/new_digs/: asgi.py  settings.py  urls.py
new_digs/new_digs_app/: admin.py  models.py  views.py
new_digs/new_digs_app/migrations/: 0001_create_pets_table.py  0001_initial.py  0002_dog_person_last_name_alter_person_first_name_and_more.py
new_digs/new_digs_app/models/: __init__.py  dog.py  owner.py  person.py  pet.py
new_digs/new_digs_app/views/: index.py  participant_app.py
new_digs_app/: views.py
new_digs_app/migrations/: 0001_create_pets_table.py
new_digs_django/: asgi.py  settings.py  wsgi.py
new_digs_django/new_digs_app/: apps.py  constants.py  models.py
