[project]
name = "new_digs"
description = "new digs django app"
version = "0.1.0"
requires-python = "~=3.10"
authors = [
    { name = "Katie Patterson", email = "katie@dallaspetsalive.org" }
]
dependencies = [
    "django",
    "django-polymorphic",
]

[project.optional-dependencies]
dev = [
    "black",
    "django-stubs",
    "mypy",
    "pre-commit",
    "pytest",
    "pytest-django",
    "ruff",
    "zappa",
]

[tool.setuptools]
packages = ["new_digs"]

[tool.ruff]
select = [
    "E",
    "F",
    "B",
    "W",
    "C90",
    "I",
    "UP",
    "DJ",
    "Q",
    "RET",
    "ARG",
    "PL",
    "TRY",
]
line-length = 150

[tool.black]
line-length = 150

[tool.mypy]
plugins = ["mypy_django_plugin.main"]
exclude = ["build/*"]

[tool.django-stubs]
django_settings_module = "new_digs.new_digs.settings"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "new_digs.settings"
pythonpath = "new_digs"
