[project]
name = "new_digs"
description = "new digs django app"
version = "0.1.0"
requires-python = "~=3.10"
authors = [
    { name = "Katie Patterson", email = "katie@dallaspetsalive.org" }
]
dependencies = [
    "django",
    "django-polymorphic",
    "zappa",
]

[project.optional-dependencies]
dev = [
    "black",
    "django-stubs",
    "mypy",
    "pytest",
    "pytest-django",
    "pre-commit",
    "ruff",
    "types-jmespath",
]

[tool.setuptools]
packages = ["new_digs_django"]

[tool.ruff]
select = [
    "E",
    "F",
    "B",
    "W",
    "C90",
    "I",
    "UP",
    "DJ",
    "Q",
    "RET",
    "ARG",
    "PL",
    "TRY",
]
line-length = 150

[tool.black]
line-length = 150

[tool.mypy]
plugins = ["mypy_django_plugin.main"]
exclude = [
    "build/*",
    "new_digs_venv/",
    "new_digs_django/new_digs_app/migrations/*",
]
disallow_any_generics = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "new_digs_app",
    "new_digs_app.models",
]
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "new_digs_django.settings"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "new_digs_django.settings"
pythonpath = "new_digs"
